# scryfall_proxy

./: Cargo.toml  Valid States of the System.md  mtg_proxy  rustfmt.toml  test.html  test.txt
src/: main.rs
