[package]
name = "mtg_proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "^0.2"
indoc = "^1.0"
serde_json = "^1.0"
#unicode-segmentation = "<= 1.8.0"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.reqwest]
version = "^0.11"
features = ["blocking", "json"]